fixes footer spacing

--- a/src/App.css
+++ b/src/App.css
@@ -281,7 +281,8 @@ body {
 }
 
 .footer {
-  margin-top: 100px;
+  width: 100%;
+  margin-top: 140px;
   display: flex;
   align-items: center;
   justify-content: center;
